# gRPC_chat

./: CMakeLists.txt  README.md
client/: chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.h  makefile
cmake/: downloadproject-template.cmake  downloadproject.cmake
server/: chat.pb.cc  chat.proto  chat_server.cc  makefile
src/: CMakeLists.txt  chat_client.cc  chat_server.cc
test/: CMakeLists.txt
